--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
 	       
 	    <tr>
 	        <th>Pagina 1</th>
-	<th>Index <a href="file:///C:/Users/avalo/OneDrive/Escritorio/Mis%20paginas%20web/Proyecto/Index.html">Ir a....</a></th>     
+	<th>Index <a href="file:///C:/Users/avalo/OneDrive/Escritorio/Mis%20paginas%20web/Proyecto/index.html">Ir a....</a></th>     
 	        <th>Pagina 2 </th> 
  	<th>biografia <a href="file:///C:/Users/avalo/OneDrive/Escritorio/Mis%20paginas%20web/Proyecto/biografia.html"> Ir a....</a></th><br>
  	        <th>Pagina 3</th>
- 	<th>Discografia <a href="file:///C:/Users/avalo/Downloads/GASTRONOMIA%203.html">Ir a....</a></th>
+ 	<th>Discografia <a href="file:///C:/Users/avalo/OneDrive/Escritorio/Mis%20paginas%20web/Proyecto/gastronomia.html">Ir a....</a></th>
 
  	        <th>Pagina 4</th>
- 	<th>Galeria <a href="file:///C:/Users/avalo/OneDrive/Escritorio/Mis%20paginas%20web/Proyecto/Galeria.html">Ir a....</a></th><br>
+ 	<th>Galeria <a href="file:///C:/Users/avalo/OneDrive/Escritorio/Mis%20paginas%20web/Proyecto/galeria.html">Ir a....</a></th><br>
 
- 	<a href="file:///C:/Users/avalo/OneDrive/Escritorio/Mis%20paginas%20web/Proyecto/Index.html">Regresar</a>
+ 	<a href="file:///C:/Users/avalo/OneDrive/Escritorio/Mis%20paginas%20web/Proyecto/index.html">Regresar</a>
 </tr>
         </footer>
 
